BTL Toan roi rac 2

--- a/MauDoAnTotNghiep/MauDoAnTotNghiep.tex
+++ b/MauDoAnTotNghiep/MauDoAnTotNghiep.tex
@@ -1,4 +1,4 @@
- \documentclass[12pt,a4paper,openany,oneside]{report}
+\documentclass[12pt,a4paper,openany,oneside]{report}
 \usepackage[utf8]{vietnam}
 \usepackage{amsmath, amsthm, amssymb,amsxtra,latexsym,amscd,graphpap,makeidx}
 \usepackage{pgf,tikz}
@@ -106,7 +106,7 @@
 \setlength{\fboxrule}{1.5pt}
 \thisfancypage{\setlength{\fboxsep}{10pt}\setlength{\shadowsize}{0pt}\doublebox}{}
 
-\begin{titlepage}
+\begin{titlepageaa}
 \fontsize{14pt}{14pt}\selectfont \baselineskip 0.65cm
 \thispagestyle{empty}
 \begin{center}
